Implement Windows backend (FFM service host + Task Scheduler); JDK 25 baseline
The last remaining backend. Routes by job shape (tension T2):

- Daemons -> an SCM service whose binPath is the bundled pure-Java FFM
  ServiceHost (a runnable in our jar). The host speaks the SCM control
  protocol via FFM upcalls (StartServiceCtrlDispatcherW -> ServiceMain,
  RegisterServiceCtrlHandlerExW -> handler, SetServiceStatus) and supervises
  the real command as a child, implementing RestartPolicy as a respawn loop.
  This is a real Windows service in pure Java (no shipped binaries).
- Scheduled specs (schedule != null) -> Task Scheduler via schtasks (any
  command, no protocol). TaskXmlWriter renders calendar/interval triggers.

A sidecar JSON in %ProgramData%\ServicePal\<id>.json is the source of truth
for read()/the managed marker and what the host reads at runtime. SCM ops go
through FFM advapi32 (FfmScm: create/config/start/stop/delete +
QueryServiceStatusEx for structured state+pid+exit). The Scm and TaskScheduler
seams stub on Linux/macOS so the backend unit-tests off Windows. SYSTEM_WIDE
only in v1 (perUserInstall=false). A confined hand-written JSON reader/writer
(Json) avoids a new dependency.

Build: maven.compiler.release 21 -> 25 (java.lang.foreign is final in JDK 22;
25 is the first LTS with it final). CI/release/probe workflows -> JDK 25; the
probe's Windows self-test passes --enable-native-access=ALL-UNNAMED and the
Alpine/OpenRC probe fetches a Temurin 25 musl runtime. Added the documented
PermissionException (ERROR_ACCESS_DENIED -> "needs Administrator").

SelfTestCli gains a Windows branch (ping as the long-running command) and a
readiness poll. +25 tests (92 total, all green off-platform); the real FFM
paths are validated by the windows-latest probe. Docs updated: all four
backends complete (step 4 done); the Windows plan is now an as-built reference.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01GR